--- a/motoramaIndex.html
+++ b/motoramaIndex.html
@@ -38,10 +38,10 @@
                     </li>
                   </ul>
                   <div id="wrap">
-                        <form action="" autocomplete="on">
-                        <input id="search" name="search" type="text" placeholder="O que você está procurando?"><input id="search_submit" value="Rechercher" type="submit">
-                        </form>
-                    </div>
+                    <form action="" autocomplete="on">
+                    <input id="search" name="search" type="text" placeholder="O que você está procurando?"><input id="search_submit" value="Rechercher" type="submit">
+                    </form>
+                  </div>
                   <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
                   <ul class="dropdown-menu dropdown-menu-right mt-2">
                         <li class="px-3 py-2">
@@ -80,15 +80,12 @@
 
               <!-- PROCURAR FONT AWESOME -->
               <style>
-                    body{
-                        height: 5000px;
-                    }
                     .parallax {
                         /* The image used */
                         background-image: url("https://images7.alphacoders.com/768/768984.jpg");
                     
                         /* Set a specific height */
-                        min-height: 15%; 
+                        min-height: 750px; 
                     
                         /* Create the parallax scrolling effect */
                         background-attachment: fixed;
