--- a/motoramaIndex.html
+++ b/motoramaIndex.html
@@ -100,7 +100,6 @@
                   <input id="search" name="search" type="text" placeholder="O que você está procurando?"><input id="search_submit" value="Rechercher" type="submit">
                 </form>
               </div>-->
-              <a href="#" class="signin"><i class="fas fa-sign-in-alt"></i></a>
 </nav>
 </head>
                     
@@ -194,14 +193,14 @@ Oh, and for those early-morning airport runs where you don’t want to wake up t
                 <h5>Começo</h5>
                 <ul>
                     <li><a href="motoramaindex.html">Inicio</a></li>
-                    <li><a href="cadastro.html">Cadastrar</a></li>
+                    <li><a href="#">Cadastrar</a></li>
                 </ul>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
                 <h5>Sobre Nós</h5>
                 <ul>
-                    <li><a href="companhia.html">Informação da Companhia</a></li>
-                    <li><a href="fale.html">Fale Conosco</a></li>
+                    <li><a href="#">Informação da Companhia</a></li>
+                    <li><a href="#">Fale Conosco</a></li>
                 </ul>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
