--- a/login/login.html
+++ b/login/login.html
@@ -3,9 +3,9 @@
 <HEAD><TITLE>Sistema de Notícias :: Login</TITLE></HEAD>
 <BODY>
 <form action="login_vai.php" method="post">
-Sistema Autenticação de Notícias.<BR>
-Login: <input type="text" name="login"><br>
-Senha: <input type="password" name="senha"><br>
-<input type="submit" value="OK!">
+Sistema Autenticação de Notícias.</br>
+Login: <input type="text" name="login"></br>
+Senha: <input type="password" name="senha">
+<input type="submit" value="Entrar">
 </form>
 </BODY></HTML>
