--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,7 @@
 <BODY>
 <form action="login_vai.php" method="post">
 Sistema Autenticação de Notícias.</br>
-Login: <input type="text" name="login"></br>
+Login: <input type="text" name="username"></br>
 Senha: <input type="password" name="senha">
 <input type="submit" value="Entrar">
 </form>
