--- a/noticiabody.html
+++ b/noticiabody.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-</head>
-<body>
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark ">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -35,7 +33,7 @@
             <a class="nav-link" href="noticia.html">Notícias</a>
           </li>
           <li class="nav-item">
-           <a class="nav-link disabled" href="#">Customização</a>
+           <a class="nav-link disabled" href="Customizacao.html">Customização</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="sobre.html">Sobre</a>
@@ -181,9 +179,9 @@
                 </ul>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
-                <h5>Sobre Nós</h5>
+                <h5>Peças</h5>
                 <ul>
-                    <li><a href="#">Informação do Site</a></li>
+                    <li><a href="https://www.tuningparts.com.br/">Compre peças</a></li>
                 </ul>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
